# darkshield

./: .gitignore
models/: Cargo.toml
models/src/: auditable.rs
models/src/authz/: group.rs  role.rs
models/src/entities/: auth.rs  authz.rs  authz_models.rs  client.rs  mod.rs  realm.rs  required_action.rs  user.rs
server/: .env  Cargo.toml
server/src/: main.rs
server/src/api/rest/endpoints/: api_config.rs  client_api.rs  mod.rs  realm_api.rs
server/src/api/rest/endpoints/admin/: mod.rs
server/src/api/rest/endpoints/admin/auth/: authentication_api.rs  authentication_execution_api.rs  authentication_flow_api.rs  authenticator_config_api.rs  mod.rs  required_action_api.rs
server/src/api/rest/models/: api_response.rs  mod.rs  realm.rs
server/src/context/: context.rs  mod.rs
server/src/metrics/: prometheus.rs
server/src/services/rds/: database.rs
services/: Cargo.toml
services/src/catalog/: catalog.rs
services/src/services/: auth_services.rs  authz_services.rs  client_services.rs  mod.rs  realm_service.rs  relam_service.rs
src/auth/: Cargo.toml
src/auth/src/: lib.rs
src/commons/: Cargo.toml
src/commons/src/: lib.rs
src/commons/src/tokens/: actions.rs  jwt.rs  jwt_error.rs  mod.rs  token.rs  token_verifier.rs
src/commons/src/tokens/actions/: action_token.rs
src/commons/src/tokens/jwt/: access_token.rs  id_token.rs  json_web_token.rs  logout_token.rs  refresh_token.rs  response_token.rs
src/commons/src/uri/: mod.rs  uri_builder.rs
src/commons/src/validation/: mod.rs
src/crypto/: Cargo.toml
src/crypto/src/: keys.rs  lib.rs  pbkdf.rs
src/crypto/src/core/: aes.rs  algorithms.rs  hmac.rs  keys.rs  mod.rs  sig.rs
src/crypto/src/jose/: jose_header.rs  jwe.rs  jwk.rs  jws.rs  mod.rs  util.rs
src/crypto/src/jose/jwe/: enc.rs  jwe.rs  jwe_algorithm.rs  jwe_context.rs  jwe_header.rs  jwe_header_set.rs  mod.rs  zip.rs
src/crypto/src/jose/jwe/alg/: aesgcmkw.rs  aeskw.rs  direct.rs  ecdh_es.rs  mod.rs  pbes2_hmac_aeskw.rs  pbs2_hmac_aeskw.rs  rsaes.rs
src/crypto/src/jose/jwe/enc/: aescbc_hmac.rs  aesgcm.rs  mod.rs
src/crypto/src/jose/jwe/header/: mod.rs
src/crypto/src/jose/jwe/zip/: deflate.rs
src/crypto/src/jose/jwk/: jwk.rs  jwk_set.rs  key_info.rs  key_pair.rs  mod.rs
src/crypto/src/jose/jwk/alg/: ec.rs  ecx.rs  ed.rs  rsa.rs  rsapss.rs
src/crypto/src/jose/jwk/der/: der_builder.rs  mod.rs
src/crypto/src/jose/jws/: jws_algorithm.rs  jws_context.rs  jws_header.rs  jws_header_set.rs  mod.rs
src/crypto/src/jose/jws/alg/: ecdsa.rs  eddsa.rs  hmac.rs  mod.rs  rsassa.rs  rsassa_pss.rs
src/crypto/src/jose/jws/header/: mod.rs
src/crypto/src/jose/util/: mod.rs
src/crypto/src/jose/util/der/: der_reader.rs  der_type.rs
src/crypto/src/pbkdf/: mod.rs  pbkdf2_error.rs
src/crypto/src/providers/: cek.rs  enc.rs  keys.rs  mod.rs  sig.rs
src/crypto/src/utils/: mod.rs
src/models/: Cargo.toml
src/models/src/: auditable.rs  lib.rs
src/models/src/authentication/: auth_tokens.rs  login_failure.rs  mod.rs  sessions.rs
src/models/src/credentials/: mod.rs  otp.rs  password.rs
src/models/src/entities/: attributes.rs  auth.rs  authz.rs  client.rs  credentials.rs  mod.rs  realm.rs  user.rs
src/models/src/tokens/: mod.rs
src/protocols/: Cargo.toml
src/protocols/src/: lib.rs
src/protocols/src/oidc/: mod.rs
src/protocols/src/oidc/code/: mod.rs
src/protocols/src/oidc/configs/: mod.rs
src/protocols/src/oidc/mappers/: mod.rs
src/protocols/src/oidc/protocol/: mod.rs
src/protocols/src/oidc/wellknow/: mod.rs
src/protocols/src/oidc/wellknow/oidc/: mod.rs  oidc_config.rs
src/server/: Cargo.toml
src/server/src/: main.rs
src/server/src/api/: mod.rs
src/server/src/api/rest/endpoints/: api_config.rs  metrics_api.rs  mod.rs
src/server/src/api/services/: auth_api.rs  authz_api.rs  client_api.rs  mod.rs  realm_api.rs  user_api.rs
src/server/src/configs/: mod.rs
src/server/src/context/: mod.rs
src/services/: Cargo.toml
src/services/src/: lib.rs
src/services/src/catalog/: mod.rs
src/services/src/core/: service.rs
src/services/src/darkshield/: darkshield_session.rs  mod.rs
src/services/src/factory/: mod.rs
src/services/src/services/: auth_services.rs  authz_services.rs  client_services.rs  credentials_services.rs  health_check.rs  mod.rs  realm_service.rs  sessions_services.rs  tokens_services.rs  user_service.rs  user_services.rs
src/services/src/session/: context.rs  darkshield_session.rs  mod.rs  session.rs
src/store/: Cargo.toml
src/store/src/providers/: mod.rs
src/store/src/providers/core/: builder.rs
src/store/src/providers/interfaces/: auth_providers.rs  authz_provider.rs  client_provider.rs  credential_provider.rs  health_check.rs  login_failure.rs  mod.rs  realm_provider.rs  session_providers.rs  tokens_providers.rs  user_provider.rs
src/store/src/providers/rds/: mod.rs
src/store/src/providers/rds/loaders/: mod.rs  rds_auth_providers.rs  rds_authz_providers.rs  rds_client_provider.rs  rds_credential_provider.rs  rds_health_check.rs  rds_login_failure.rs  rds_realm_provider.rs  rds_session_providers.rs  rds_tokens_providers.rs  rds_user_provider.rs
src/store/src/providers/rds/tables/: auth_table.rs  authz_tables.rs  client_tables.rs  credential_table.rs  health_table.rs  login_table.rs  mod.rs  sessions_table.rs  tokens_table.rs  user_table.rs
store/: Cargo.toml
store/src/providers/: mod.rs  modules.rs
store/src/providers/core/: builder.rs
store/src/providers/interfaces/: auth_providers.rs  authz_provider.rs  client_provider.rs  mod.rs  realm_provider.rs  required_action_provider.rs  user_provider.rs
store/src/providers/rds/: mod.rs
store/src/providers/rds/client/: postgres_client.rs
store/src/providers/rds/converters/: converter.rs
store/src/providers/rds/loaders/: mod.rs  rds_auth_providers.rs  rds_authz_providers.rs  rds_client_provider.rs  rds_realm_provider.rs  rds_required_action_provider.rs  rds_user_provider.rs  realm_provider.rs
store/src/providers/rds/tables/: action_table.rs  authz_tables.rs  mod.rs  rds_table.rs  realm_table.rs  user_table.rs
(+28 files in other folders)
