[package]
edition = "2021"
name = "models"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
serde = {version = "1.0.143", features = ["derive"]}
serde_json = "1.0.83"
validator = {version = "0.16.0", features = ["derive"]}
