[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
serde = {version = "1.0.143", features = ["derive"]}
serde_json = "1.0.83"
models = { path = "../models", version = "0.1.0" }
services = { path = "../services", version = "0.1.0" }
store = { path = "../store", version = "0.1.0" }