[package]
name = "commons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.143", features = ["derive"]}
serde_json = "1.0.83"
actix-web = "4.1.0"
regex = "1.6.0"
chrono = { version = "0.4.22", features = ["serde"] }
validator = {version = "0.16.0", features = ["derive"]}
postgres-types = {version="0.2.4", features = ["derive"]}
async-trait = "0.1.57"
futures="0.3.24"
serde_with = "2.0.1"
base64-url = "1.4.13"
[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
