[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
commons = { path = "../commons", version = "0.1.0" }
serde_json = "1.0.83"
serde = {version = "1.0.143", features = ["derive"]}
ring = "0.16.20"
lazy_static="1.4.0"
data-encoding = "2.3.2"
base64-url = "1.4.13"
async-trait = "0.1.57"
flate2 = "1.0.24"
anyhow = "1.0.65"
thiserror = "1.0.37"
once_cell="1.15.0"
regex = "1.6.0"
openssl-sys = "0.9.76"
openssl = "0.10.42"