[package]
edition = "2021"
name = "models"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { path = "../crypto", version = "0.1.0" }
serde = {version = "1.0.143", features = ["derive"]}
chrono = { version = "0.4.22", features = ["serde"] }
serde_json = "1.0.83"
validator = {version = "0.16.0", features = ["derive"]}
postgres-types = {version="0.2.4", features = ["derive"]}
async-trait = "0.1.57"
futures="0.3.24"
[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
