[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
commons = { path = "../commons", version = "0.1.0" }
models = { path = "../models", version = "0.1.0" }
services = { path = "../services", version = "0.1.0" }
store = { path = "../store", version = "0.1.0" }
crypto = { path = "../crypto", version = "0.1.0" }

actix-web = "4.1.0"
serde = {version = "1.0.143", features = ["derive"]}
deadpool-postgres = "0.10.1" 
postgres = "0.19.1" 
serde_json = "1.0.83"
dotenv = "0.15.0"
prometheus= "0.13.1"
lazy_static="1.4.0"
shaku = "0.6.1"
log = "0.4.17"
env_logger = "0.9.0"