[package]
name = "store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { path = "../models", version = "0.1.0" }
deadpool-postgres = "0.10.1" 
tokio = "1.20.1"
lazy_static="1.4.0"
shaku = "0.6.1"
async-trait = "0.1.57"
serde_json = "1.0"
log = "0.4.17"
tokio-postgres = { version="0.7.6", features=["with-chrono-0_4"] }
postgres-types = {version = "0.2.4", features = ["derive", "with-serde_json-1"]}
async-recursion = "1.0.0"